--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,49 @@
+# Mac OS X and others:
+*.tar
+*.gz
+.dir_bash_history
+*.dir_bash_history
+.DS_Store
+.ipynb_checkpoints
+*.zip
+data/
+manuscript/
+results/
+
+# Vim:
+*~
+*.swp
+
+# Compiled python modules:
+*.pyc
+
+# Ptyhon packaging, setuptools, eggs, etc.:
+MANIFEST
+PKG-INFO
+*.egg-info
+__pycache__
+*.egg
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Sphinx:
+docs/_build
+docs/_static
+docs/_templates
+doc
+Meta
+
+
+
 # History files
 .Rhistory
 .Rapp.history
@@ -22,8 +68,8 @@
 .Rproj.user/
 
 # produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+#vignettes/*.html
+#vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
